UIMA-1560 synchronized access to 'remaining' var. Added check for null before dereferencing anAction
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/uimaj/trunk@812551 13f79535-47bb-0310-9956-ffa450edef68